# ComputePipeline

./: .gitignore  CMakeLists.txt  ComputePipeline.cpp  ComputePipeline.h  README.MD
Private/: Pipeline.cpp
Public/: DataObject.h  MetaData.h  Pipeline.h  Utility.h
Public/Actions/: Action.h  ExtractZipAction.h  ImgDecodeAction.h  JSONParseAction.h  LoadFileAction.h
